apps/talos_cluster/connectivity-tester/service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: connectivity-tester-api-temp
    namespace: matrix
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - connectivity-tester.mtrnord.blog
        - federationtester.mtrnord.blog
    rules:
        - matches:
            - path:
                value: /api
                type: PathPrefix
            - path:
                value: /api-docs
                type: PathPrefix
          backendRefs:
            - name: connectivity-tester-api-primary
              port: 8080
          timeouts:
            request: 240s
            backendRequest: 0s
