apps/talos_cluster/connectivity-tester/staging_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connectivity-tester-stage
  namespace: matrix
spec:
  replicas: 2
  progressDeadlineSeconds: 120
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: connectivity-tester-stage
  template:
    metadata:
      labels:
        app: connectivity-tester-stage
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: federation-tester-api
          image: ghcr.io/mtrnord/rust-federation-tester:main
          imagePullPolicy: Always
          resources:
            limits: {}
            requests:
              memory: "344Mi"
              cpu: "252m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: api-config
              mountPath: /app/config.yaml
              subPath: config.yaml
              readOnly: true
          ports:
            - containerPort: 8080
              name: api
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: api
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /healthz
              port: api
              scheme: HTTP
          startupProbe:
            httpGet:
              path: /healthz
              port: api
        - name: connection-checker-ui
          image: ghcr.io/mtrnord/matrix-connection-tester-ui:main
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - sleep
                  - "10"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits: {}
            requests:
              memory: "344Mi"
              cpu: "252m"
          ports:
            - containerPort: 8000
              name: web
              protocol: TCP
          volumeMounts:
            - name: configs
              mountPath: "/app/_fresh/client/config.json"
              subPath: config.json
              readOnly: true
            - mountPath: /tmp
              name: tmp
          livenessProbe:
            httpGet:
              path: /
              port: web
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: web
              scheme: HTTP
          startupProbe:
            httpGet:
              path: /
              port: web
      volumes:
        - name: configs
          configMap:
            name: connectivity-tester-stage-config
        - name: tmp
          emptyDir:
            sizeLimit: 2048Mi
        - name: api-config
          secret:
            secretName: connectivity-tester-stage-config
---
apiVersion: v1
kind: Service
metadata:
  name: connectivity-tester-stage
spec:
  selector:
    app: connectivity-tester-stage
  ports:
    - name: api
      port: 8080
      targetPort: 8080
    - name: web
      port: 8000
      targetPort: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: connectivity-tester-stage
  namespace: matrix
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - stage.connectivity-tester.mtrnord.blog
    - beta.connectivity-tester.mtrnord.blog
  rules:
    - matches:
        - path:
            value: /
            type: PathPrefix
      backendRefs:
        - name: connectivity-tester-stage
          port: 8000
      timeouts:
        request: 240s
        backendRequest: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: connectivity-tester-stage-api
  namespace: matrix
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - api.stage.connectivity-tester.mtrnord.blog
  rules:
    - matches:
        - path:
            value: /
            type: PathPrefix
      backendRefs:
        - name: connectivity-tester-stage
          port: 8080
      timeouts:
        request: 240s
        backendRequest: 0s
