apps/talos_cluster/connectivity-tester/tester-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: connectivity-tester-v2
    namespace: matrix
spec:
    selector:
        matchLabels:
            app: connectivity-tester-v2
    template:
        metadata:
            labels:
                app: connectivity-tester-v2
        spec:
            containers:
                - name: connectivity-tester-v2
                  image: ghcr.io/mtrnord/connectivity-tester-v2:latest
                  resources:
                      limits: {}
                      requests:
                          memory: "344Mi"
                          cpu: "252m"
                  ports:
                      - containerPort: 8000
                        name: web
                        protocol: TCP
                  livenessProbe:
                      httpGet:
                          path: /
                          port: web
                          scheme: HTTP
                  readinessProbe:
                      httpGet:
                          path: /
                          port: web
                          scheme: HTTP
                  startupProbe:
                      httpGet:
                          path: /
                          port: web
---
apiVersion: v1
kind: Service
metadata:
    name: connectivity-tester-v2
    namespace: matrix
spec:
    selector:
        app: connectivity-tester-v2
    ports:
        - name: web
          port: 8000
          targetPort: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: connectivity-tester-v2
    namespace: matrix
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - beta.connectivity-tester.mtrnord.blog
    rules:
        - backendRefs:
              - name: connectivity-tester-v2
                port: 8000
          timeouts:
              request: 240s
              backendRequest: 0s
